（fix）Fix header not showing on a small screen

--- a/49-Todo List/style.css
+++ b/49-Todo List/style.css
@@ -11,7 +11,6 @@ body {
   display: flex;
   flex-direction: column;
   font-family: 'Poppins', sans-serif;
-  height: 100vh;
   justify-content: center;
   margin: 0;
 }
